#9 updated and linked to InvitationStatus

--- a/docs/api-reference/CRMScript.NetServer.NSAlarmData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAlarmData.yml
@@ -130,7 +130,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.String
-      description:  The actual text, max 2047 significant characters even though it is stored as a larger data type on some databases
+      description: The actual text, max 2047 significant characters even though it is stored as a larger data type on some databases
   example: 
   - "\n<pre><code>NSAlarmData thing;\nString appointmentText  = thing.GetAppointmentText();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAlarmData.GetAppointmentType()
@@ -172,7 +172,7 @@ items:
       type: CRMScript.Global.Integer
       description: Status if this appointment is in the process of being assigned to someone else.
   example: 
-  - "\n<pre><code>NSAlarmData thing;\nInteger assignmentStatus  = thing.GetAssignmentStatus();</code></pre>\n"
+  - "\n<pre><code>NSAlarmData thing;\nInteger assignmentStatus = thing.GetAssignmentStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAlarmData.GetBookingType()
   commentId: M:CRMScript.NetServer.NSAlarmData.GetBookingType()
   id: 'GetBookingType()'
@@ -192,7 +192,7 @@ items:
       type: CRMScript.Global.Integer
       description: The type of booking the appointment represents.
   example: 
-  - "\n<pre><code>NSAlarmData thing;\nInteger bookingType  = thing.GetBookingType();</code></pre>\n"
+  - "\n<pre><code>NSAlarmData thing;\nInteger bookingType = thing.GetBookingType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAlarmData.GetContactDepartment()
   commentId: M:CRMScript.NetServer.NSAlarmData.GetContactDepartment()
   id: 'GetContactDepartment()'
@@ -212,7 +212,7 @@ items:
       type: CRMScript.Global.String
       description: Department.
   example: 
-  - "\n<pre><code>NSAlarmData thing;\nString contactDepartment  = thing.GetContactDepartment();</code></pre>\n"
+  - "\n<pre><code>NSAlarmData thing;\nString contactDepartment = thing.GetContactDepartment();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAlarmData.GetContactFullName()
   commentId: M:CRMScript.NetServer.NSAlarmData.GetContactFullName()
   id: 'GetContactFullName()'
@@ -232,7 +232,7 @@ items:
       type: CRMScript.Global.String
       description:
   example: 
-  - "\n<pre><code>NSAlarmData thing;\nString contactFullName  = thing.GetContactFullName();</code></pre>\n"
+  - "\n<pre><code>NSAlarmData thing;\nString contactFullName = thing.GetContactFullName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAlarmData.GetContactId()
   commentId: M:CRMScript.NetServer.NSAlarmData.GetContactId()
   id: 'GetContactId()'
@@ -252,7 +252,7 @@ items:
       type: CRMScript.Global.Integer
       description: Contact ID of owning contact, may be 0.
   example: 
-  - "\n<pre><code>NSAlarmData thing;\nInteger contactId  = thing.GetContactId();</code></pre>\n"
+  - "\n<pre><code>NSAlarmData thing;\nInteger contactId = thing.GetContactId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAlarmData.GetContactName()
   commentId: M:CRMScript.NetServer.NSAlarmData.GetContactName()
   id: 'GetContactName()'
@@ -272,7 +272,7 @@ items:
       type: CRMScript.Global.String
       description: Contact name
   example: 
-  - "\n<pre><code>NSAlarmData thing;\nString contactName  = thing.GetContactName();</code></pre>\n"
+  - "\n<pre><code>NSAlarmData thing;\nString contactName = thing.GetContactName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAlarmData.GetEndDate()
   commentId: M:CRMScript.NetServer.NSAlarmData.GetEndDate()
   id: 'GetEndDate()'
@@ -292,7 +292,7 @@ items:
       type: CRMScript.Global.DateTime
       description: Date + end time planned
   example: 
-  - "\n<pre><code>NSAlarmData thing;\nDateTime endDate  = thing.GetEndDate();</code></pre>\n"
+  - "\n<pre><code>NSAlarmData thing;\nDateTime endDate = thing.GetEndDate();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAlarmData.GetFormalName()
   commentId: M:CRMScript.NetServer.NSAlarmData.GetFormalName()
   id: 'GetFormalName()'
@@ -312,7 +312,7 @@ items:
       type: CRMScript.Global.String
       description: The associate's culture formatted formalname (firstname, middleName and lastname, title, mrmrs)
   example: 
-  - "\n<pre><code>NSAlarmData thing;\nString formalName  = thing.GetFormalName();</code></pre>\n"
+  - "\n<pre><code>NSAlarmData thing;\nString formalName = thing.GetFormalName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAlarmData.GetInvitationStatus()
   commentId: M:CRMScript.NetServer.NSAlarmData.GetInvitationStatus()
   id: 'GetInvitationStatus()'
@@ -332,7 +332,7 @@ items:
       type: CRMScript.Global.Integer
       description: Status if this appointment represents an invitation
   example: 
-  - "\n<pre><code>NSAlarmData thing;\nInteger invitationStatus  = thing.GetInvitationStatus();</code></pre>\n"
+  - "\n<pre><code>NSAlarmData thing;\nInteger invitationStatus = thing.GetInvitationStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAlarmData.GetLocation()
   commentId: M:CRMScript.NetServer.NSAlarmData.GetLocation()
   id: 'GetLocation()'
@@ -352,7 +352,7 @@ items:
       type: CRMScript.Global.String
       description: Location for appointment, defaulted from invited resource of type place and other rules, but you can write anything you want here
   example: 
-  - "\n<pre><code>NSAlarmData thing;\nString location  = thing.GetLocation();</code></pre>\n"
+  - "\n<pre><code>NSAlarmData thing;\nString location = thing.GetLocation();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAlarmData.GetPersonFullName()
   commentId: M:CRMScript.NetServer.NSAlarmData.GetPersonFullName()
   id: 'GetPersonFullName()'
@@ -372,7 +372,7 @@ items:
       type: CRMScript.Global.String
       description: The associate's culture formatted fullname (firstname, middleName and lastname)
   example: 
-  - "\n<pre><code>NSAlarmData thing;\nString personFullName  = thing.GetPersonFullName();</code></pre>\n"
+  - "\n<pre><code>NSAlarmData thing;\nString personFullName = thing.GetPersonFullName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAlarmData.GetPersonId()
   commentId: M:CRMScript.NetServer.NSAlarmData.GetPersonId()
   id: 'GetPersonId()'
@@ -392,7 +392,7 @@ items:
       type: CRMScript.Global.Integer
       description: Person ID of person the appointment is with, may be 0
   example: 
-  - "\n<pre><code>NSAlarmData thing;\nInteger personId  = thing.GetPersonId();</code></pre>\n"
+  - "\n<pre><code>NSAlarmData thing;\nInteger personId = thing.GetPersonId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAlarmData.GetProjectId()
   commentId: M:CRMScript.NetServer.NSAlarmData.GetProjectId()
   id: 'GetProjectId()'
@@ -432,7 +432,7 @@ items:
       type: CRMScript.Global.String
       description: Project name
   example: 
-  - "\n<pre><code>NSAlarmData thing;\nString projectName  = thing.GetProjectName();</code></pre>\n"
+  - "\n<pre><code>NSAlarmData thing;\nString projectName = thing.GetProjectName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAlarmData.GetSaleId()
   commentId: M:CRMScript.NetServer.NSAlarmData.GetSaleId()
   id: 'GetSaleId()'
@@ -452,7 +452,7 @@ items:
       type: CRMScript.Global.Integer
       description: Owning sale, if any (may be 0)
   example: 
-  - "\n<pre><code>NSAlarmData thing;\nInteger saleId  = thing.GetSaleId();</code></pre>\n"
+  - "\n<pre><code>NSAlarmData thing;\nInteger saleId = thing.GetSaleId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAlarmData.GetSaleName()
   commentId: M:CRMScript.NetServer.NSAlarmData.GetSaleName()
   id: 'GetSaleName()'
@@ -472,7 +472,7 @@ items:
       type: CRMScript.Global.String
       description:
   example: 
-  - "\n<pre><code>NSAlarmData thing;\nString saleName  = thing.GetSaleName();</code></pre>\n"
+  - "\n<pre><code>NSAlarmData thing;\nString saleName = thing.GetSaleName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAlarmData.GetStartTime()
   commentId: M:CRMScript.NetServer.NSAlarmData.GetStartTime()
   id: 'GetStartTime()'
@@ -492,7 +492,7 @@ items:
       type: CRMScript.Global.DateTime
       description: date + start time planned
   example: 
-  - "\n<pre><code>NSAlarmData thing;\nDateTime startTime  = thing.GetStartTime();</code></pre>\n"
+  - "\n<pre><code>NSAlarmData thing;\nDateTime startTime = thing.GetStartTime();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAlarmData.GetTaskName()
   commentId: M:CRMScript.NetServer.NSAlarmData.GetTaskName()
   id: 'GetTaskName()'
@@ -512,7 +512,7 @@ items:
       type: CRMScript.Global.String
       description:
   example: 
-  - "\n<pre><code>NSAlarmData thing;\nString taskName  = thing.GetTaskName();</code></pre>\n"
+  - "\n<pre><code>NSAlarmData thing;\nString taskName = thing.GetTaskName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAlarmData.SetAlarmTime()
   commentId: M:CRMScript.NetServer.NSAlarmData.SetAlarmTime()
   id: 'SetAlarmTime()'
@@ -612,13 +612,13 @@ items:
   fullName: CRMScript.NetServer.NSAlarmData.SetAssignmentStatus(Integer)
   type: Method
   summary: ""
-  remarks: "\nSee <xref href=\"CRMScript.NetServer.AssignmentStatus\" data-throw-if-not-resolved=\"false\"></xref>\n"
+  remarks: ""
   syntax: 
     content: SetAssignmentStatus(Integer assignmentStatus)
     parameters:
     - id: assignmentStatus
       type: CRMScript.Global.Integer
-      description: Status if this appointment is in the process of being assigned to someone else
+      description: Status if this appointment is in the process of being assigned to someone else. See <xref href=\"CRMScript.NetServer.AssignmentStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -634,13 +634,13 @@ items:
   fullName: CRMScript.NetServer.NSAlarmData.SetBookingType(Integer)
   type: Method
   summary: ""
-  remarks: "\nSee <xref href=\"CRMScript.NetServer.BookingType\" data-throw-if-not-resolved=\"false\"></xref>\n"
+  remarks: ""
   syntax: 
     content: Void SetBookingType(Integer bookingType)
     parameters:
     - id: bookingType
       type: CRMScript.Global.Integer
-      description: The type of booking the appointment represents
+      description: The type of booking the appointment represents. See <xref href=\"CRMScript.NetServer.BookingType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -788,13 +788,13 @@ items:
   fullName: CRMScript.NetServer.NSAlarmData.SetInvitationStatus(Integer)
   type: Method
   summary: ""
-  remarks: "\n<p>See enum invitationStatus.</p>\n"
+  remarks: ""
   syntax: 
     content: Void SetInvitationStatus(Integer invitationStatus)
     parameters:
     - id: invitationStatus
       type: CRMScript.Global.Integer
-      description: Status if this appointment represents an invitation
+      description: Status if this appointment represents an invitation. See <xref href=\"CRMScript.NetServer.InvitationStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1040,3 +1040,9 @@ references:
   name: BookingType
   nameWithType: BookingType
   fullName: CRMScript.NetServer.BookingType
+- uid: CRMScript.NetServer.InvitationStatus
+  commentId: T:CRMScript.NetServer.InvitationStatus
+  isExternal: true
+  name: InvitationStatus
+  nameWithType: InvitationStatus
+  fullName: CRMScript.NetServer.InvitationStatus
