--- a/docs/api-reference/CRMScript.NetServer.NSAppointment.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAppointment.yml
@@ -1568,7 +1568,7 @@ items:
   fullName: CRMScript.NetServer.NSAppointment.SetInvitationStatus(Integer)
   type: Method
   summary: "\nStatus if this appointment represents an invitation\n"
-  remarks: "\n<p>See enum InvitationStatus.</p>\n"
+  remarks: "\nSee <xref href=\"CRMScript.NetServer.InvitationStatus\" data-throw-if-not-resolved=\"false\"></xref>\n"
   syntax: 
     content: SetInvitationStatus(Integer invitationStatus)
     parameters:
@@ -2140,3 +2140,9 @@ references:
   name: AppointmentType
   nameWithType: AppointmentType
   fullName: CRMScript.NetServer.AppointmentType
+- uid: CRMScript.NetServer.InvitationStatus
+  commentId: T:CRMScript.NetServer.InvitationStatus
+  isExternal: true
+  name: InvitationStatus
+  nameWithType: InvitationStatus
+  fullName: CRMScript.NetServer.InvitationStatus
