--- a/docs/api-reference/CRMScript.NetServer.NSAppointmentEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAppointmentEntity.yml
@@ -1652,7 +1652,7 @@ items:
   fullName: CRMScript.NetServer.NSAppointmentEntity.SetInvitationStatus(Integer)
   type: Method
   summary: "\nStatus if this appointment represents an invitation\n"
-  remarks: "\n<p>See enum InvitationStatus.</p>\n"
+  remarks: "\nSee <xref href=\"CRMScript.NetServer.InvitationStatus\" data-throw-if-not-resolved=\"false\"></xref>\n"
   syntax: 
     content: SetInvitationStatus(Integer invitationStatus)
     parameters:
@@ -2444,3 +2444,9 @@ references:
   name: BookingType
   nameWithType: BookingType
   fullName: CRMScript.NetServer.BookingType
+- uid: CRMScript.NetServer.InvitationStatus
+  commentId: T:CRMScript.NetServer.InvitationStatus
+  isExternal: true
+  name: InvitationStatus
+  nameWithType: InvitationStatus
+  fullName: CRMScript.NetServer.InvitationStatus
