--- a/docs/api-reference/CRMScript.NetServer.NSParticipantInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSParticipantInfo.yml
@@ -226,7 +226,7 @@ items:
   fullName: CRMScript.NetServer.NSParticipantInfo.SetInvitationStatus(Integer)
   type: Method
   summary: "\nThe participant status for the appointment\n"
-  remarks: "\n<p>See enum InvitationStatus.</p>\n"
+  remarks: "\nSee <xref href=\"CRMScript.NetServer.InvitationStatus\" data-throw-if-not-resolved=\"false\"></xref>\n"
   syntax: 
     content: SetInvitationStatus(Integer invitationStatus)
     parameters:
@@ -294,3 +294,9 @@ references:
   name: Bool
   nameWithType: Bool
   fullName: CRMScript.Global.Bool
+- uid: CRMScript.NetServer.InvitationStatus
+  commentId: T:CRMScript.NetServer.InvitationStatus
+  isExternal: true
+  name: InvitationStatus
+  nameWithType: InvitationStatus
+  fullName: CRMScript.NetServer.InvitationStatus
