--- a/docs/api-reference/CRMScript.NetServer.yml
+++ b/docs/api-reference/CRMScript.NetServer.yml
@@ -66,7 +66,7 @@ items:
   - CRMScript.NetServer.freeTextOperator
   - CRMScript.NetServer.generatorEncoding
   - CRMScript.NetServer.invitationDocType
-  - CRMScript.NetServer.invitationStatus
+  - CRMScript.NetServer.InvitationStatus
   - CRMScript.NetServer.isIndexed
   - CRMScript.NetServer.justification
   - CRMScript.NetServer.languageId
@@ -746,12 +746,12 @@ references:
   name: BookingType
   nameWithType: BookingType
   fullName: CRMScript.NetServer.BookingType
-- uid: CRMScript.NetServer.invitationStatus
-  commentId: T:CRMScript.NetServer.invitationStatus
+- uid: CRMScript.NetServer.InvitationStatus
+  commentId: T:CRMScript.NetServer.InvitationStatus
   isExternal: true
-  name: invitationStatus
-  nameWithType: invitationStatus
-  fullName: CRMScript.NetServer.invitationStatus
+  name: InvitationStatus
+  nameWithType: InvitationStatus
+  fullName: CRMScript.NetServer.InvitationStatus
 - uid: CRMScript.NetServer.NSAmountClassEntity
   commentId: T:CRMScript.NetServer.NSAmountClassEntity
   isExternal: true
