--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -1266,8 +1266,8 @@ items:
       href: CRMScript.NetServer.generatorEncoding.yml
     - name: Enum invitationDocType
       href: CRMScript.NetServer.invitationDocType.yml
-    - name: Enum invitationStatus
-      href: CRMScript.NetServer.invitationStatus.yml
+    - name: InvitationStatus
+      href: CRMScript.NetServer.InvitationStatus.yml
     - name: Enum isIndexed
       href: CRMScript.NetServer.isIndexed.yml
     - name: Enum justification
