--- a/docs/api-reference/CRMScript.NetServer.invitationStatus.yml
+++ b/docs/api-reference/CRMScript.NetServer.invitationStatus.yml
@@ -1,160 +1,161 @@
 ### YamlMime:ManagedReference
 items:
-- uid: CRMScript.NetServer.invitationStatus
-  commentId: T:CRMScript.NetServer.invitationStatus
-  id: invitationStatus
+- uid: CRMScript.NetServer.InvitationStatus
+  # Same as SuperOffice.Data.InvitationStatus
+  commentId: T:CRMScript.NetServer.InvitationStatus
+  id: InvitationStatus
   langs:
   - crmscript
   children:
-  - CRMScript.NetServer.invitationStatus.Unknown
-  - CRMScript.NetServer.invitationStatus.None
-  - CRMScript.NetServer.invitationStatus.Accepted
-  - CRMScript.NetServer.invitationStatus.Hidden
-  - CRMScript.NetServer.invitationStatus.Invitation
-  - CRMScript.NetServer.invitationStatus.Moved
-  - CRMScript.NetServer.invitationStatus.Seen
-  - CRMScript.NetServer.invitationStatus.MovedSeen
-  - CRMScript.NetServer.invitationStatus.Declined
-  - CRMScript.NetServer.invitationStatus.Cancelled
-  name: invitationStatus
-  nameWithType: invitationStatus
-  fullName: CRMScript.NetServer.invitationStatus
+  - CRMScript.NetServer.InvitationStatus.Unknown
+  - CRMScript.NetServer.InvitationStatus.None
+  - CRMScript.NetServer.InvitationStatus.Accepted
+  - CRMScript.NetServer.InvitationStatus.Hidden
+  - CRMScript.NetServer.InvitationStatus.Invitation
+  - CRMScript.NetServer.InvitationStatus.Moved
+  - CRMScript.NetServer.InvitationStatus.Seen
+  - CRMScript.NetServer.InvitationStatus.MovedSeen
+  - CRMScript.NetServer.InvitationStatus.Declined
+  - CRMScript.NetServer.InvitationStatus.Cancelled
+  name: InvitationStatus
+  nameWithType: InvitationStatus
+  fullName: CRMScript.NetServer.InvitationStatus
   type: Enum
-  summary: 
-- uid: CRMScript.NetServer.invitationStatus.Unknown
-  commentId: F:CRMScript.NetServer.invitationStatus.Unknown
-  id: invitationStatus.Unknown
+  summary: "\nStatus if this appointment represents an invitation.\n"
+- uid: CRMScript.NetServer.InvitationStatus.Unknown
+  commentId: F:CRMScript.NetServer.InvitationStatus.Unknown
+  id: InvitationStatus.Unknown
   langs:
   - crmscript
-  name: invitationStatus.Unknown
-  nameWithType: invitationStatus.Unknown
-  fullName: CRMScript.NetServer.invitationStatus.Unknown
+  name: InvitationStatus.Unknown
+  nameWithType: InvitationStatus.Unknown
+  fullName: CRMScript.NetServer.InvitationStatus.Unknown
   type: Field
-  summary: "\n0: Unknown\n"
+  summary: "\n0: Unknown - used when initializing\n"
   syntax: 
     content: Unknown = 0
-    type: CRMScript.NetServer.invitationStatus
-- uid: CRMScript.NetServer.invitationStatus.None
-  commentId: F:CRMScript.NetServer.invitationStatus.None
-  id: invitationStatus.None
+    type: CRMScript.NetServer.InvitationStatus
+- uid: CRMScript.NetServer.InvitationStatus.None
+  commentId: F:CRMScript.NetServer.InvitationStatus.None
+  id: InvitationStatus.None
   langs:
   - crmscript
-  name: invitationStatus.None
-  nameWithType: invitationStatus.None
-  fullName: CRMScript.NetServer.invitationStatus.None
+  name: InvitationStatus.None
+  nameWithType: InvitationStatus.None
+  fullName: CRMScript.NetServer.InvitationStatus.None
   type: Field
-  summary: "\n1: None\n"
+  summary: "\n1: Default value when the appointment is not a booking child\n"
   syntax: 
     content: None = 1
-    type: CRMScript.NetServer.invitationStatus
-- uid: CRMScript.NetServer.invitationStatus.Accepted
-  commentId: F:CRMScript.NetServer.invitationStatus.Accepted
-  id: invitationStatus.Accepted
+    type: CRMScript.NetServer.InvitationStatus
+- uid: CRMScript.NetServer.InvitationStatus.Accepted
+  commentId: F:CRMScript.NetServer.InvitationStatus.Accepted
+  id: InvitationStatus.Accepted
   langs:
   - crmscript
-  name: invitationStatus.Accepted
-  nameWithType: invitationStatus.Accepted
-  fullName: CRMScript.NetServer.invitationStatus.Accepted
+  name: InvitationStatus.Accepted
+  nameWithType: InvitationStatus.Accepted
+  fullName: CRMScript.NetServer.InvitationStatus.Accepted
   type: Field
-  summary: "\n2: Accepted\n"
+  summary: "\n2: The invitation has been accepted\n"
   syntax: 
     content: Accepted = 2
-    type: CRMScript.NetServer.invitationStatus
-- uid: CRMScript.NetServer.invitationStatus.Hidden
-  commentId: F:CRMScript.NetServer.invitationStatus.Hidden
-  id: invitationStatus.Hidden
+    type: CRMScript.NetServer.InvitationStatus
+- uid: CRMScript.NetServer.InvitationStatus.Hidden
+  commentId: F:CRMScript.NetServer.InvitationStatus.Hidden
+  id: InvitationStatus.Hidden
   langs:
   - crmscript
-  name: invitationStatus.Hidden
-  nameWithType: invitationStatus.Hidden
-  fullName: CRMScript.NetServer.invitationStatus.Hidden
+  name: InvitationStatus.Hidden
+  nameWithType: InvitationStatus.Hidden
+  fullName: CRMScript.NetServer.InvitationStatus.Hidden
   type: Field
   summary: "\n4: Hidden\n"
   syntax: 
     content: Hidden = 4
-    type: CRMScript.NetServer.invitationStatus
-- uid: CRMScript.NetServer.invitationStatus.Invitation
-  commentId: F:CRMScript.NetServer.invitationStatus.Invitation
-  id: invitationStatus.Invitation
+    type: CRMScript.NetServer.InvitationStatus
+- uid: CRMScript.NetServer.InvitationStatus.Invitation
+  commentId: F:CRMScript.NetServer.InvitationStatus.Invitation
+  id: InvitationStatus.Invitation
   langs:
   - crmscript
-  name: invitationStatus.Invitation
-  nameWithType: invitationStatus.Invitation
-  fullName: CRMScript.NetServer.invitationStatus.Invitation
+  name: InvitationStatus.Invitation
+  nameWithType: InvitationStatus.Invitation
+  fullName: CRMScript.NetServer.InvitationStatus.Invitation
   type: Field
-  summary: "\n5: Invitation\n"
+  summary: "\n5: An invitation to a meeting not observed by the attending party\n"
   syntax: 
     content: Invitation = 5
-    type: CRMScript.NetServer.invitationStatus
-- uid: CRMScript.NetServer.invitationStatus.Moved
-  commentId: F:CRMScript.NetServer.invitationStatus.Moved
-  id: invitationStatus.Moved
+    type: CRMScript.NetServer.InvitationStatus
+- uid: CRMScript.NetServer.InvitationStatus.Moved
+  commentId: F:CRMScript.NetServer.InvitationStatus.Moved
+  id: InvitationStatus.Moved
   langs:
   - crmscript
-  name: invitationStatus.Moved
-  nameWithType: invitationStatus.Moved
-  fullName: CRMScript.NetServer.invitationStatus.Moved
+  name: InvitationStatus.Moved
+  nameWithType: InvitationStatus.Moved
+  fullName: CRMScript.NetServer.InvitationStatus.Moved
   type: Field
-  summary: "\n6: Moved\n"
+  summary: "\n6: The meeting has been moved\n"
   syntax: 
     content: Moved = 6
-    type: CRMScript.NetServer.invitationStatus
-- uid: CRMScript.NetServer.invitationStatus.Seen
-  commentId: F:CRMScript.NetServer.invitationStatus.Seen
-  id: invitationStatus.Seen
+    type: CRMScript.NetServer.InvitationStatus
+- uid: CRMScript.NetServer.InvitationStatus.Seen
+  commentId: F:CRMScript.NetServer.InvitationStatus.Seen
+  id: InvitationStatus.Seen
   langs:
   - crmscript
-  name: invitationStatus.Seen
-  nameWithType: invitationStatus.Seen
-  fullName: CRMScript.NetServer.invitationStatus.Seen
+  name: InvitationStatus.Seen
+  nameWithType: InvitationStatus.Seen
+  fullName: CRMScript.NetServer.InvitationStatus.Seen
   type: Field
-  summary: "\n7: Seen\n"
+  summary: "\n7: An invitation to a meeting observed by the attending party. This can also be viewed upon as a tentative response to participate in the meeting.\n"
   syntax: 
     content: Seen = 7
-    type: CRMScript.NetServer.invitationStatus
-- uid: CRMScript.NetServer.invitationStatus.MovedSeen
-  commentId: F:CRMScript.NetServer.invitationStatus.MovedSeen
-  id: invitationStatus.MovedSeen
+    type: CRMScript.NetServer.InvitationStatus
+- uid: CRMScript.NetServer.InvitationStatus.MovedSeen
+  commentId: F:CRMScript.NetServer.InvitationStatus.MovedSeen
+  id: InvitationStatus.MovedSeen
   langs:
   - crmscript
-  name: invitationStatus.MovedSeen
-  nameWithType: invitationStatus.MovedSeen
-  fullName: CRMScript.NetServer.invitationStatus.MovedSeen
+  name: InvitationStatus.MovedSeen
+  nameWithType: InvitationStatus.MovedSeen
+  fullName: CRMScript.NetServer.InvitationStatus.MovedSeen
   type: Field
-  summary: "\n8: MovedSeen\n"
+  summary: "\n8: The meeting has been moved, and this is observed by the attending party\n"
   syntax: 
     content: MovedSeen = 8
-    type: CRMScript.NetServer.invitationStatus
-- uid: CRMScript.NetServer.invitationStatus.Declined
-  commentId: F:CRMScript.NetServer.invitationStatus.Declined
-  id: invitationStatus.Declined
+    type: CRMScript.NetServer.InvitationStatus
+- uid: CRMScript.NetServer.InvitationStatus.Declined
+  commentId: F:CRMScript.NetServer.InvitationStatus.Declined
+  id: InvitationStatus.Declined
   langs:
   - crmscript
-  name: invitationStatus.Declined
-  nameWithType: invitationStatus.Declined
-  fullName: CRMScript.NetServer.invitationStatus.Declined
+  name: InvitationStatus.Declined
+  nameWithType: InvitationStatus.Declined
+  fullName: CRMScript.NetServer.InvitationStatus.Declined
   type: Field
-  summary: "\n9: Declined\n"
+  summary: "\n9: The invitation has been declined/rejected\n"
   syntax: 
     content: Declined = 9
-    type: CRMScript.NetServer.invitationStatus
-- uid: CRMScript.NetServer.invitationStatus.Cancelled
-  commentId: F:CRMScript.NetServer.invitationStatus.Cancelled
-  id: invitationStatus.Cancelled
+    type: CRMScript.NetServer.InvitationStatus
+- uid: CRMScript.NetServer.InvitationStatus.Cancelled
+  commentId: F:CRMScript.NetServer.InvitationStatus.Cancelled
+  id: InvitationStatus.Cancelled
   langs:
   - crmscript
-  name: invitationStatus.Cancelled
-  nameWithType: invitationStatus.Cancelled
-  fullName: CRMScript.NetServer.invitationStatus.Cancelled
+  name: InvitationStatus.Cancelled
+  nameWithType: InvitationStatus.Cancelled
+  fullName: CRMScript.NetServer.InvitationStatus.Cancelled
   type: Field
-  summary: "\n10: Cancelled\n"
+  summary: "\n10: The meeting has been cancelled.\n"
   syntax: 
     content: Cancelled = 10
-    type: CRMScript.NetServer.invitationStatus
+    type: CRMScript.NetServer.InvitationStatus
 references:
-- uid: CRMScript.NetServer.invitationStatus
-  commentId: T:CRMScript.NetServer.invitationStatus
+- uid: CRMScript.NetServer.InvitationStatus
+  commentId: T:CRMScript.NetServer.InvitationStatus
   isExternal: true
-  name: invitationStatus
-  nameWithType: invitationStatus
-  fullName: CRMScript.NetServer.invitationStatus
+  name: InvitationStatus
+  nameWithType: InvitationStatus
+  fullName: CRMScript.NetServer.InvitationStatus
